# fork-ds-generator

./: .env  .gitignore  REFINE_UI_DESIGN.md  formgen-runner.js  formgen.ts  package.json  tsconfig.json
ai-agent/: .env.example  .gitignore  README.md  pyproject.toml
ai-agent/src/refine_template_agent/: __init__.py  api.py  auth_graph.py  config.py  graph.py  main.py  prompts.py  schemas.py
public/: env.json.example  keycloak.json.example
src/: App.tsx
src/__generate/: graphql-frontend.ts
src/components/basic/: ErrorModal.tsx
src/graphql/: schema.graphql
src/graphql/__generate/: gqlGenResult.json
src/graphql/__generate/Clinic/: Clinic.graphql  ClinicCustomer.graphql  ClinicDoctor.graphql  ClinicDoctorAvailability.graphql  ClinicDoctorTable.graphql  ClinicOffice.graphql
src/graphql/__generate/Customer/: Customer.graphql
src/graphql/__generate/Doctor/: Doctor.graphql
src/graphql/__generate/Person/: Person.graphql
src/graphql/__generate/RootDictionary/: DoctorType.graphql
src/refine/: AppRefine.css  AppRefine.tsx  LoginPage.css  LoginPage.tsx  PersonaContext.tsx  README.overlayUI.md  authConfig.ts  authProviderFactory.ts  dataProvider.ts  keycloakInit.ts  keycloakPersona.ts  personaFields.ts  personaResolve.ts  refineAuth.json  refineUiOverlay.json  resourceConfig.ts  uiOverlay.types.ts
src/refine/__generate/: FormGenResult.json  refineMeta.json
