[project]
name = "refine-template-agent"
version = "0.1.0"
description = "LangGraph agent that completes refineUiOverlay.json templates after frontend codegen"
readme = "README.md"
authors = [
    { name = "Bobakka", email = "antigalaxy@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "langchain-core>=1.2.22",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
refine-agent-api = "refine_template_agent.main:run"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
